--- a/GOL - Game of Life/src/MVC/Main.fxml
+++ b/GOL - Game of Life/src/MVC/Main.fxml
@@ -1,14 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.image.*?>
-<?import java.lang.*?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.effect.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
+<?import javafx.scene.canvas.Canvas?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.MenuButton?>
 <?import javafx.scene.control.MenuItem?>
@@ -17,22 +10,12 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
-<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
-<?import javafx.scene.canvas.*?>
 
-<BorderPane prefHeight="600.0" prefWidth="800.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="MVC.Controller">
+<BorderPane prefHeight="419.0" prefWidth="510.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/8.0.112" xmlns:fx="http://javafx.com/fxml/1" fx:controller="MVC.Controller">
 
    <center>   
       <Pane prefHeight="600.0" prefWidth="800.0" style="-fx-background-color: lightblue;" BorderPane.alignment="CENTER">
-      	
-        <children>
-            <Pane layoutX="10.0" layoutY="10.0">
-               <children>
-                  <Canvas fx:id="graphics" height="515.0" nodeOrientation="INHERIT" onMouseClicked="#mouseClicked" width="780.0" />
-               </children>
-            </Pane>
-        </children>
       
                <BorderPane.margin>
             <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
@@ -41,6 +24,9 @@
                <effect>
             <InnerShadow choke="0.1" height="10.0" radius="4.5" width="10.0" />
          </effect>
+         <children>
+             <Canvas fx:id="graphics" height="300.0" onDragDone="#draw" width="496.0" BorderPane.alignment="CENTER" />
+         </children>
                   
             </Pane>
    </center>
@@ -53,34 +39,8 @@
       <HBox alignment="CENTER_LEFT" spacing="10.0" BorderPane.alignment="CENTER">
          <children>
             <Label text="Zoom" />
-            <Button mnemonicParsing="false" text="-" />
-            <Slider fx:id="sizeSlider" max="50.0" min="1.0" onMouseDragged="#newSizeEvent" value="5.0" />
-            <Button mnemonicParsing="false" text="+" />
-            <Button mnemonicParsing="false" text="Start">
-               <font>
-                  <Font name="Arial Black" size="15.0" />
-               </font>
-            </Button>
-            <Button mnemonicParsing="false" text="Stop" onAction="#clearEvent" >
-               <font>
-                  <Font name="Arial Black" size="15.0" />
-               </font>
-            </Button>
-            <Button mnemonicParsing="false" prefWidth="100.0" text="Load file">
-               <font>
-                  <Font name="Arial Black" size="15.0" />
-               </font>
-            </Button>
-            <MenuButton mnemonicParsing="false" prefWidth="110.0" text="Patterns">
-              <items>
-                <MenuItem mnemonicParsing="false" text="Pattern1" />
-                <MenuItem mnemonicParsing="false" text="Pattern2" />
-              </items>
-               <font>
-                  <Font name="Arial Black" size="15.0" />
-               </font>
-            </MenuButton>
-            <MenuButton mnemonicParsing="false" text="Speed">
+            <Slider fx:id="sizeSlider" max="50.0" min="1.0" value="5.0" />
+            <MenuButton fx:id="startButton" mnemonicParsing="false" onAction="#drawGrid" text="start" textFill="#d32b2b">
               <items>
                 <MenuItem mnemonicParsing="false" text="1x" />
                 <MenuItem mnemonicParsing="false" text="2x" />
