--- a/GOL - Game of Life/src/MVC/Main.fxml
+++ b/GOL - Game of Life/src/MVC/Main.fxml
@@ -1,58 +1,59 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.canvas.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.effect.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.canvas.Canvas?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.MenuButton?>
-<?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.Slider?>
 <?import javafx.scene.effect.InnerShadow?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
-<?import javafx.scene.text.Font?>
 
-<BorderPane prefHeight="419.0" prefWidth="510.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="MVC.Controller">
+<BorderPane prefHeight="419.0" prefWidth="510.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/8.0.112" xmlns:fx="http://javafx.com/fxml/1" fx:controller="MVC.Controller">
 
-   <center>   
-      <Pane prefHeight="600.0" prefWidth="800.0" style="-fx-background-color: lightblue;" BorderPane.alignment="CENTER">
-      
-               <BorderPane.margin>
-            <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-         </BorderPane.margin>
-         
-               <effect>
-            <InnerShadow choke="0.1" height="10.0" radius="4.5" width="10.0" />
-         </effect>
-         <children>
-             <Canvas fx:id="graphics" height="335.0" onDragDone="#draw" width="500.0" BorderPane.alignment="CENTER" />
-         </children>
-                  
-            </Pane>
-   </center>
-   
-   <effect>
-      <InnerShadow choke="0.1" height="50.0" radius="24.5" width="50.0" />
-   </effect>
-   
-   <bottom>
-      <HBox alignment="CENTER_LEFT" spacing="10.0" BorderPane.alignment="CENTER">
-         <children>
-            <Label text="Zoom" />
-            <Slider fx:id="sizeSlider" max="50.0" min="1.0" value="5.0" />
-            <Button mnemonicParsing="false" text="Start" />
-            <Button mnemonicParsing="false" text="Stop" />
-         </children>
-         <BorderPane.margin>
-            <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
-         </BorderPane.margin>
-      </HBox>
-   </bottom>
+
+
+    <center>
+
+        <Pane prefHeight="345.0" prefWidth="500.0" style="-fx-background-color: lightblue;" BorderPane.alignment="CENTER">
+            <BorderPane.margin>
+                <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+            </BorderPane.margin>
+
+            <effect>
+                <InnerShadow choke="0.1" height="10.0" radius="4.5" width="10.0" />
+            </effect>
+
+            <children>
+                <Canvas fx:id="graphics" height="344.0" onDragDetected="#drawGrid" onDragDone="#draw" onMouseClicked="#drawGrid" width="500.0" BorderPane.alignment="CENTER" />
+            </children>
+        </Pane>
+
+    </center>
+
+
+    <effect>
+
+        <InnerShadow choke="0.1" height="50.0" radius="24.5" width="50.0" />
+
+    </effect>
+
+
+
+    <bottom>
+
+        <HBox alignment="CENTER_LEFT" spacing="10.0" BorderPane.alignment="CENTER">
+            <children>
+                <Label text="Zoom" />
+                <Slider fx:id="SizeSlider" max="40.0" min="8.0" onMouseDragged="#sizeChange" value="5.0" />
+                <Button mnemonicParsing="false" text="Start" />
+                <Button mnemonicParsing="false" text="Stop" />
+            </children>
+            <BorderPane.margin>
+                <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+            </BorderPane.margin>
+        </HBox>
+    </bottom>
+
 </BorderPane>
