--- a/GOL - Game of Life/src/MVC/Main.fxml
+++ b/GOL - Game of Life/src/MVC/Main.fxml
@@ -1,84 +1,53 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.image.*?>
-<?import java.lang.*?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.effect.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.canvas.Canvas?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ColorPicker?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.MenuButton?>
-<?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.Slider?>
 <?import javafx.scene.effect.InnerShadow?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
 
-<BorderPane prefHeight="600.0" prefWidth="800.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
-   <center>
-      <Pane prefHeight="600.0" prefWidth="800.0" style="-fx-background-color: lightblue;" BorderPane.alignment="CENTER">
-         <BorderPane.margin>
-            <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-         </BorderPane.margin>
-         <effect>
-            <InnerShadow choke="0.1" height="10.0" radius="4.5" width="10.0" />
-         </effect>
-      </Pane>
-   </center>
-   <effect>
-      <InnerShadow choke="0.1" height="50.0" radius="24.5" width="50.0" />
-   </effect>
-   <bottom>
-      <HBox alignment="CENTER_LEFT" spacing="10.0" BorderPane.alignment="CENTER">
-         <children>
-            <Label text="Zoom" />
-            <Button mnemonicParsing="false" text="-" />
-            <Slider />
-            <Button mnemonicParsing="false" text="+" />
-            <Button mnemonicParsing="false" text="Start">
-               <font>
-                  <Font name="Arial Black" size="15.0" />
-               </font>
-            </Button>
-            <Button mnemonicParsing="false" text="Stop">
-               <font>
-                  <Font name="Arial Black" size="15.0" />
-               </font>
-            </Button>
-            <Button mnemonicParsing="false" prefWidth="100.0" text="Load file">
-               <font>
-                  <Font name="Arial Black" size="15.0" />
-               </font>
-            </Button>
-            <MenuButton mnemonicParsing="false" prefWidth="110.0" text="Patterns">
-              <items>
-                <MenuItem mnemonicParsing="false" text="Pattern1" />
-                <MenuItem mnemonicParsing="false" text="Pattern2" />
-              </items>
-               <font>
-                  <Font name="Arial Black" size="15.0" />
-               </font>
-            </MenuButton>
-            <MenuButton mnemonicParsing="false" text="Speed">
-              <items>
-                <MenuItem mnemonicParsing="false" text="1x" />
-                <MenuItem mnemonicParsing="false" text="2x" />
-                  <MenuItem mnemonicParsing="false" text="4x" />
-              </items>
-               <font>
-                  <Font name="Arial Black" size="15.0" />
-               </font>
-            </MenuButton>
-         </children>
-         <BorderPane.margin>
-            <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
-         </BorderPane.margin>
-      </HBox>
-   </bottom>
+<BorderPane prefHeight="600.0" prefWidth="800.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="MVC.Controller">
+
+    <center>
+        <Pane prefHeight="600.0" prefWidth="800.0" style="-fx-background-color: lightblue;" BorderPane.alignment="CENTER">
+
+            <BorderPane.margin>
+                <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+            </BorderPane.margin>
+
+            <effect>
+                <InnerShadow choke="0.1" height="10.0" radius="4.5" width="10.0" />
+            </effect>
+            <children>
+                <Canvas fx:id="graphics" height="520.0" onMouseClicked="#drawCell" width="790.0" />
+            </children>
+
+        </Pane>
+    </center>
+
+    <effect>
+        <InnerShadow choke="0.1" height="50.0" radius="24.5" width="50.0" />
+    </effect>
+
+    <bottom>
+        <HBox alignment="CENTER_LEFT" spacing="10.0" BorderPane.alignment="CENTER">
+            <children>
+                <Label text="Zoom" />
+                <Slider fx:id="sizeSlider" max="75.0" min="25.0" onMouseDragged="#sizeChange" />
+                <Button mnemonicParsing="false" onAction="#start_Game" text="Start" />
+                <Button mnemonicParsing="false" onMouseClicked="#start_Game" text="Load" />
+                <Button mnemonicParsing="false" onMouseClicked="#clearBoard" text="Clear" />
+                <Button mnemonicParsing="false" text="Random" />
+                <ColorPicker fx:id="colorChanger" />
+            </children>
+            <BorderPane.margin>
+                <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+            </BorderPane.margin>
+        </HBox>
+    </bottom>
 </BorderPane>
