--- a/GOL - Game of Life/src/golView/Main.fxml
+++ b/GOL - Game of Life/src/golView/Main.fxml
@@ -19,44 +19,27 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane prefHeight="600.0" prefWidth="800.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="golController.BoardCtrl"> 
-
-   <center>   
-      <Pane prefHeight="600.0" prefWidth="800.0" style="-fx-background-color: black;" BorderPane.alignment="CENTER"> 
-      
-               <BorderPane.margin>
-            <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-         </BorderPane.margin>
-         
-               <effect>
-            <InnerShadow choke="0.1" height="10.0" radius="4.5" width="10.0" />
-         </effect>
-         <children>
-             <Canvas fx:id="graphics" height="520.0" onMouseDragged="#drawCell" width="790.0" /> 
-         </children>
-                  
-            </Pane>
-   </center>
-   
-   <effect>
-      <InnerShadow choke="0.1" height="50.0" radius="24.5" width="50.0" />
-   </effect>
+<BorderPane prefHeight="600.0" prefWidth="900.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="golController.BoardCtrl">
    
    <bottom>
       <HBox alignment="CENTER_LEFT" spacing="10.0" BorderPane.alignment="CENTER">
          <children>
             <Label text="Zoom" />
-            <Slider fx:id="sizeSlider" max="75.0" min="10.0" onMouseDragged="#sizeChange" />
-            <ToggleButton mnemonicParsing="false" fx:id="startPause" onMouseClicked="#toggleBtn" text="Start" />
+            <Slider fx:id="sizeSlider" max="50.0" min="10.0" onMouseDragged="#sizeChange" />
+            <ToggleButton fx:id="startPause" mnemonicParsing="false" onMouseClicked="#toggleBtn" text="Start" />
             <Button mnemonicParsing="false" onMouseClicked="#stop" text="Stop" />
-            <ToggleButton mnemonicParsing="false" fx:id="eraseBtn" onMouseClicked="#eraseCell" text="Erase" />
+            <ToggleButton fx:id="eraseBtn" mnemonicParsing="false" onMouseClicked="#eraseCell" text="Erase" />
             <Button mnemonicParsing="false" onMouseClicked="#clearBoard" text="Reset" />
             <Button mnemonicParsing="false" text="Random" />
             <ColorPicker fx:id="colorChanger" />
+            <ComboBox fx:id="speedBtn" onAction="#speedSlction" prefWidth="100.0" promptText="Speed" />
          </children>
          <BorderPane.margin>
             <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
          </BorderPane.margin>
       </HBox>
    </bottom>
+   <center>
+      <Canvas fx:id="graphics" height="530.0" onMouseDragged="#drawCell" width="900.0" BorderPane.alignment="CENTER" />
+   </center>
 </BorderPane>
